1.2-5
* Bar display: shift-clicking on background or bars will now open the menu.

1.2-4
* Added Russian translation (incomplete, someone finish it please).
* Fixed HPS not showing.
* Fixed segment list skipping segments.

1.2-3
* Added a reset command to the menu.
* Added a mana regen mode, part of a new SkadaPower module.
* Added optional tooltips showing min/max/average hit for Damage mode.
* Failbot and boss libraries are now kept up to date.

1.2-2
* 3.1 compatible.

1.2-1
* Moved window configuration to the main configuration.
* Added window header font setting.
* Made spell icons a little prettier (thanks Aezay)
* Added displaying of miss types in Damage mode spell details.
* Fixed "Only keep bosses" options so that last fight is still displayed even if it is not a boss fight.
* Made LibDBIcon-1.0 optional for the disembedding crowd.
* Fixed background frame not displayed properly on first bar (thanks whynona2)
* Major changes in backend. Modes no longer have anything to do with the display of data. Currently there is only the traditional bar display system used by most damage meters, but implementing a new system should be fairly trivial.
* Added options to hiude DPS/HPS in damage and healing modes. Temporary solution which should be replaced with a generic field selection at some point.
* Bar display: Added options to use or not use class colors for bars and text.
* Bar display: Fixed background frame to use background instead of statusbars (thanks ethancentaurai).
* Bar display: Added options to enable or disable class colors for bars and for bar text.
* Bar display: Fixed issue with SharedMedia media not being available right away.
* Bar display: Changed reverse growth to keep highest value at top.

1.1-4
* Fixed whisper reports. Hopefully the last of the "fix what I broke last weekend" versions.

1.1-3
* Fixed reporting (oops).

1.1-2
* Fixed some leftover bugs from the transition to multiple windows.
* Now tracking DAMAGE_SHIELD events.